2006-12-18  Kohei Yoshida  <kohei.yoshida@gmail.com>

	Merge from 2.0.4 branch

2006-12-03  Kohei Yoshida  <kohei.yoshida@gmail.com>

	* source/inc/numeric/lpmodel.hxx:
	* source/numeric/lpmodel.cxx:
	* source/inc/option.hxx:
	* source/ui/option.cxx:
	* source/numeric/lpsolve.cxx: added internal bits for enabling integer 
	constraints on decision variables.  This is not enabled in the UI yet, but
	eventually will show up in the Options dialog.
	
	* source/tool/timer.cxx: removed #include <stdio.h>.

	* source/ui/basedlg.cxx: added extra checks for NULL widget to prevent
	application crash on exit when trying to unregister a NULL-pointer 
	listener.

	* source/ui/dialog.cxx: (finally) fixed a rather serious typo here, which
	was causing the whole soffice.bin process to segfault on exit every time
	the Solver dialog is invoked.  I wonder why this problem did not surface
	before....
	
	* source/ui/solvemodel.cxx: added bits for integer constraints & localized
	the standard exception message.

2006-12-01  Kohei Yoshida  <kohei.yoshida@gmail.com>

	* scsolver/source/ui/scsolver.src: added German strings (contributed from
	KAMI).

2006-11-29  Kohei Yoshida  <kohei.yoshida@gmail.com>

	* scsolver/source/inc/listener.hxx: removed debug output.
	* scsolver/source/ui/basedlg.cxx: DEBUG -> SCSOLVER_DEBUG & removed debug
	output.
	* scsolver/source/ui/optiondlg.cxx: removed unused parameter & l10n work.
	* scsolver/source/ui/scsolver.hrc: added new string IDs.
	* scsolver/source/ui/scsolver.src: added new string items.
	* scsolver/source/ui/solvemodel.cxx: removed 'static' keyword from typedef
	of cell_address_t which caused the build to fail using older versions of 
	gcc, safer and more automatic way of re-enabling cell updates after it's 
	been turned off (parseConstraint), and some l10n work.

2006-11-21  Kohei Yoshida  <kohei.yoshida@gmail.com>

	* source/ui/listener.cxx (ConstEditBtnListener::actionPerformed): show the