@@ -35,5 +35,7 @@
 #define SCSOLVER_STR_MSG_GOAL_NOT_SET             (SCSOLVER_RES_START+29)
 #define SCSOLVER_STR_OPTIONDLG_TITLE              (SCSOLVER_RES_START+30)
 #define SCSOLVER_STR_OPTION_ASSUME_LINEAR         (SCSOLVER_RES_START+31)
+#define SCSOLVER_STR_OPTION_VAR_POSITIVE          (SCSOLVER_RES_START+32)
+#define SCSOLVER_STR_OPTION_VAR_INTEGER           (SCSOLVER_RES_START+33)
 
 #endif
