@@ -192,3 +192,12 @@ String SCSOLVER_STR_OPTION_ASSUME_LINEAR
 	Text [ de ] = "Lineares Modell angenommen";
 };
 
+String SCSOLVER_STR_OPTION_VAR_POSITIVE
+{
+	Text [ en-US ] = "Allow only positive values";
+};
+
+String SCSOLVER_STR_OPTION_VAR_INTEGER
+{
+	Text [ en-US ] = "Allow only integer values";
+};
