@@ -1,3 +1,12 @@
+2007-01-08  Kohei Yoshida  <kohei.yoshida@gmail.com>
+
+	* source/inc/optiondlg.hxx:
+	* source/ui/optiondlg.cxx: added two new check boxes for integer and 
+	positive value constraints.
+
+	* source/ui/scsolver.hrc:
+	* source/ui/scsolver.src: added two new strings within Options dialog.
+
 2006-12-18  Kohei Yoshida  <kohei.yoshida@gmail.com>
 
 	Merge from 2.0.4 branch
